# nio-smith

./: .gitignore  README.md  SETUP-DOCKER.md  conftest.py  formatting_msg_test.txt  main.py  pyproject.toml  requirements.txt  sample.config.yaml
core/: callbacks.py  chat_functions.py  config.py  plugin.py  pluginloader.py
data/: .gitignore
data/config/: sample.config.yaml
data/state/: .gitignore
docker/: Dockerfile  Dockerfile.dev  README.md  build_and_install_libolm.sh  docker-compose.yml  nio-smith.service
docs/: PLUGINS.md  SETUP_DOCKER.md  SETUP_NATIVE.md
helpers/: copy_plugin_config_files.sh
plugins/aichat/: README.md  aichat.py  aichat.sample.yaml
plugins/cashup/: README.md  cashup.py  test_cashup.py
plugins/dates/: requirements.txt
plugins/help/: help.py
plugins/openai/: openai.py  openai.sample.yaml
plugins/sample/: sample.py
