[project]
name = "AssistantNio"
version = "0.0.1"
authors = [
  { name="JimmyPesto"},
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
